# abir

./: .gitignore  README.md  pyproject.toml
abir/: __init__.py  attributes.py  core.py  environ.py  yaml.py
project/: settings.py
testsuites/: TestLoad.py  conf_module.py
